--- a/sdl-music/Makefile
+++ b/sdl-music/Makefile
@@ -1,8 +1,8 @@
 CXX := g++
 
-CXXFLAGS := -Wall -Wextra -Werror -std=c++23 $(shell sdl2-config --cflags)
+CXXFLAGS := -Wall -Wextra -Werror -std=c++23 $(shell sdl2-config --cflags) 
 
-LDFLAGS := $(shell sdl2-config --libs)
+LDFLAGS := $(shell sdl2-config --libs) -lSDL2_image -lSDL2_mixer
 
 SRC = main.cpp
 
