--- a/planets/Makefile
+++ b/planets/Makefile
@@ -2,7 +2,7 @@ CXX := g++
 
 CXXFLAGS := -Wall -Wextra -Werror -std=c++23 $(shell sdl2-config --cflags)
 
-LDFLAGS := $(shell sdl2-config --libs) -lGL -lGLU
+LDFLAGS := $(shell sdl2-config --libs) -lGL -lGLU -lSDL2_image
 
 SRC = main.cpp
 
